fixed line spacing issues

--- a/style.css
+++ b/style.css
@@ -5,29 +5,27 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: #383B53;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.4em;
   font-weight: 400;
 }
 
 h1, h2, h3 {
   font-family: 'Oswald', sans-serif;
   color: #32213A;
+  line-height: 1.2em;
 }
 
 h1 {
   font-size: 32px;
-  line-height: 24px
 }
 
 h2 {
   font-size: 24px;
-  line-height: 16px;
 }
 
 h3 {
   font-size: 16px;
   font-weight: bold;
-  line-height: 8px;
 }
 
 a {
